package edu.fiuba.algo3.algomail;

public interface Credencial {
    @Override
    boolean equals(Object o);
}
